[package]
name = "eqmonitor-api"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
axum = { version = "0.6.4", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hyper = { version = "0.14", features = ["client", "http2"] }
hyper-tls = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuttle-service = { version = "0.9.0", features = ["web-axum"] }
sync_wrapper = "0.1.2"
tokio = { version = "1", features = ["full"] }
